Fix hard to read text in new color schemes, especially dark mode (#409)
* increase color contrast dark theme
* tabs colors fixes
* removed border-x-color because those borders are set to width=0
* update mini tabs colors
* implement bootstrap table coloring+update for bs5
* fix re-user secondary header color that doest not match palette
* Theming for BS5 accordion
---------

--- a/scss/vendor-extensions/bootstrap-3.scss
+++ b/scss/vendor-extensions/bootstrap-3.scss
@@ -244,13 +244,7 @@ blockquote footer, blockquote small, blockquote .small {
       &:hover {
         color: $gray-lighter;
       }
-    }
-    &.active,
-    &.ui-tabs-active {
-      position: relative;
-      // added !important below because bootstrap? is adding inline JS bottom:0
-      bottom: -1px !important; // more reliable than margin-bottom. 
-      a {
+      &.active {
         color: $primary;
         cursor: pointer;
         border: 1px solid $gray-lighter;
@@ -266,8 +260,8 @@ blockquote footer, blockquote small, blockquote .small {
     }
   }
 }
-.dxpr-theme-boxed-container .nav-tabs >li.active a {
-  border-bottom-color: white;
+.az-tabs .nav-tabs > li > a.active[role="tab"] {
+  background-color: #ffffff;
 }
 
 .region-content nav.tabs:after {
@@ -289,8 +283,8 @@ blockquote footer, blockquote small, blockquote .small {
       padding: 0;
       border: none;
       a {
-        background-color: white;
-        color: #333;
+        background-color: $header-color;
+        color: $header-text-color;
         padding: 8px;
         text-transform: uppercase;
         font-size: 12px;
@@ -300,7 +294,7 @@ blockquote footer, blockquote small, blockquote .small {
         line-height: 1.42857143;
         &:hover,
         &:focus {
-          color: #777;
+          text-decoration: underline;
         }
       }
       &.active {
@@ -351,19 +345,6 @@ blockquote footer, blockquote small, blockquote .small {
 
 .tabs-left>.tab-content, .tabs-right>.tab-content {
   padding: 20px;
-}
-
-.html .tabs-left > .nav-tabs .active>a {
-  border-right-color: $body-background;
-}
-.dxpr-theme-boxed-container .tabs-left > .nav-tabs .active>a {
-  border-right-color: white;
-}
-.html .tabs-right > .nav-tabs .active>a {
-  border-left-color: $body-background;
-}
-.dxpr-theme-boxed-container .tabs-right > .nav-tabs .active>a {
-  border-left-color: white;
 }
 
 // Progress Bar
